# Snowcore_Revenue_Agent

./: .gitignore  AGENT_BUILD_PLAN.md  AGENT_BUILD_STEPS.md  DATA_SOURCES.md  Dockerfile  GRANITE_ENHANCEMENT_PLAN.md  PITCH.md  README.md  entrypoint.sh  nginx.conf
VULCAN_MATERIALS_DB_ML_SNOWCORE_REVENUE_AGENT/: metadata.yaml  optimization_log.md
app/: README.md
app/backend/: __init__.py  app.py
backend/: boardroom.py  main.py  requirements.txt
deploy/: Dockerfile  deploy.sh  nginx.conf  registry_login.py
docs/: BOARDROOM_DESIGN.md  BOARDROOM_TASKS.md  GRANITE_v2_Model_Specifications.md  V2_ARCHITECTURE.md  Vulcan Materials Revenue Forecast Methodology.docx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  (+1 more)
isf/: ISF_Architecture_ManufacturingRevenueIntelligence.html  ISF_Solution_ManufacturingRevenueIntelligence.json  generate_architecture.py
manufacturing-revenue-intelligence/: README.md  SKILL.md  pyproject.toml
manufacturing-revenue-intelligence/boardroom-strategy/: SKILL.md
manufacturing-revenue-intelligence/competitive-intelligence/: SKILL.md
manufacturing-revenue-intelligence/cross-functional-qa/: SKILL.md
manufacturing-revenue-intelligence/demand-pricing/: SKILL.md
manufacturing-revenue-intelligence/regional-weather/: SKILL.md
manufacturing-revenue-intelligence/revenue-intelligence/: SKILL.md
manufacturing-revenue-intelligence/risk-simulation/: SKILL.md
scripts/: create_feature_store.py  generate_v2_product_data.py  train_copula_sim.py  train_elasticity.py  train_pricing_optimizer.py
(+46 files in other folders)
