[project]
name = "manufacturing-revenue-intelligence"
version = "0.1.0"
description = "CFO-focused manufacturing revenue intelligence skill suite for Cortex Code"
requires-python = ">=3.11"
dependencies = [
    "snowflake-snowpark-python>=1.40.0",
    "snowflake-ml-python>=1.5.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "copulas>=0.9.0",
]
